--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
         <p>
             <a href="./newhome">新版主站引导页</a><br>
+            <a href="http://zsv.asia:15044/">新版工作室官网</a><br>
+            <a href="http://yd.zsv.asia:15044/">新版工作室引导页</a><br>
+            <a href="http://bk.zsv.asia:15044/">新版工作室博客</a><br>
         </p>
         <p>
             <b>主站</b><br>
